assigmnet 3 all steps plus unit test