@@ -12,19 +12,24 @@ import org.mockito.junit.jupiter.MockitoSettings;
 import org.mockito.quality.Strictness;
 import org.springframework.web.client.RestTemplate;
 
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
-@MockitoSettings(strictness = Strictness.LENIENT)
 class NewsServiceImplTest {
 
     @Mock
     private NewsDao newsDao;
 
-    //@InjectMocks
+    @Mock
+    private RestTemplate restTemplate;
+
+    @InjectMocks
     private NewsServiceImpl newsService;
 
     @BeforeEach
@@ -32,27 +37,48 @@ class NewsServiceImplTest {
         MockitoAnnotations.openMocks(this);
         newsService = new NewsServiceImpl(new RestTemplate());
         newsService.newsDao = newsDao;
+
     }
 
 
     @Test
-    void testAddUserDetails() throws Exception {
-        String email = "test@example.com";
+    void testAddUserDetails() {
+        String email = "user@example.com";
         String country = "us";
-        String category = "technology";
-        String expectedResult = "User details saved successfully"; // Change this according to your implementation
-        when(newsDao.addUserDetails(email, country, category)).thenReturn(expectedResult);
-        String result = newsService.addUserDetails(email, country, category);
-        assertEquals(expectedResult, result);
+        String category = "general";
+        List<String> sources = Collections.singletonList("source1");
+
+        newsService.newsDao = newsDao;
+        when(newsDao.addUserDetails(email, country, category, sources)).thenReturn("User details saved successfully");
+        String result = newsService.addUserDetails(email, country, category, sources);
+        assertEquals("User details saved successfully", result);
+        verify(newsDao, times(1)).addUserDetails(email, country, category, sources);
     }
 
     @Test
-    void testGetNewsById() throws Exception{
+    void testGetNewsById() throws Exception {
         String id = "user123";
         String count = "10";
-        List<Article> expectedArticles = List.of(new Article(), new Article());
-        when(newsDao.getNewsById(id, count)).thenReturn(expectedArticles);
-        List<Article> result = newsService.getNewsById(id, count);
-        assertEquals(expectedArticles, result);
+        String from = "2023-07-18";
+        String to = "2023-08-01";
+
+        List<String> expectedNews = Arrays.asList("news1", "news2");
+        when(newsDao.getNewsById(id, count, from, to)).thenReturn(expectedNews);
+        List<String> result = newsService.getNewsById(id, count, from, to);
+        assertEquals(expectedNews, result);
+        verify(newsDao, times(1)).getNewsById(id, count, from, to);
     }
+
+    @Test
+    void testGetSources() {
+
+        String id = "user123";
+        List<String> expectedSources = Arrays.asList("source1", "source2");
+        when(newsDao.getSources(id)).thenReturn(expectedSources);
+        List<String> result = newsService.getSources(id);
+        assertEquals(expectedSources, result);
+
+    }
+
+
 }
